# msdelta

./: .gitignore  CLAUDE.md  Cargo.toml  PA31-LCU-GAPS.md  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml
crates/lzms/: Cargo.toml
crates/lzms/benches/: corpus.rs  throughput.rs
crates/lzms/examples/: ratio_report.rs
crates/lzms/src/: adaptive.rs  container.rs  lib.rs  range_coder.rs  tables.rs  wim.rs  x86_filter.rs
crates/lzms/tests/: proptest_roundtrip.rs  wim_genuine_ms.rs
crates/lzms/tests/fixtures/lzms/: README.md  english.lzms  pattern.lzms  random.raw  single_byte.lzms  wim_solid_lzms_ms.resource  wim_solid_lzms_ms_3chunk.resource  wim_solid_lzms_ms_rebuild.resource
crates/msdelta/: Cargo.toml
crates/msdelta-bitstream/: Cargo.toml
crates/msdelta-bitstream/src/: bitstream.rs  huffman.rs  lib.rs
crates/msdelta-bsdiff/: Cargo.toml
crates/msdelta-bsdiff/src/: lib.rs
crates/msdelta-lzms/: Cargo.toml
crates/msdelta-lzms/src/: lib.rs
crates/msdelta-lzx/: Cargo.toml
crates/msdelta-lzx/src/: lib.rs  lzx.rs  ops.rs  rift.rs
crates/msdelta-pa19/: Cargo.toml
crates/msdelta-pa19/src/: header.rs  lib.rs  lzx.rs
crates/msdelta-pe/: Cargo.toml
crates/msdelta-pe/src/: lib.rs  pe.rs  transform.rs
crates/msdelta-wintest/: Cargo.toml
crates/msdelta-wintest/src/: lib.rs  native.rs
crates/msdelta/src/: dcm.rs  lib.rs  pa30.rs
crates/oracle/: Cargo.toml
crates/oracle/lab/: oracle_harness.ps1  run.sh
crates/oracle/src/: lib.rs
crates/oracle/src/kernel/: direction.rs  job.rs  mod.rs  report.rs  rng.rs
crates/oracle/src/msdelta/: case.rs  generators.rs  minimize.rs  mod.rs  report.rs  spec.rs
crates/oracle/tests/: generators.rs  minimize.rs  report.rs  wire.rs
docs/: feature-atoms.md  feature-atoms.tsv  frida-oracle-system.md  managed-cli-atoms.md
examples/: analyze_delta.rs  gen_delta.rs  gen_roundtrip_corpus.rs  sweep_check.rs
fuzz/: .gitignore  Cargo.toml  coverage.sh  lzms.dict  pa30.dict  pa31.dict  seed_corpus.sh  xpress.dict
fuzz/fuzz_targets/: fuzz_apply.rs  fuzz_lzms.rs  fuzz_lzms_container.rs  fuzz_lzms_decompress.rs  fuzz_lzms_mutate.rs  fuzz_lzms_roundtrip.rs  fuzz_lzms_wim.rs  fuzz_lzms_wim_roundtrip.rs  fuzz_lzx.rs  fuzz_pa30_header.rs  fuzz_pa30_roundtrip.rs  fuzz_pa31_apply.rs  fuzz_rift_roundtrip.rs  fuzz_roundtrip_bsdiff.rs  fuzz_roundtrip_lzx.rs  fuzz_x86_e8.rs  fuzz_xpress.rs
fuzz/src/: lib.rs
lab/frida/: README.md  capture-export-oracle.mjs  capture-managed-corpus.sh  check-stage-symbol-map.sh  import-inject-capture.mjs  managed-corpus.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  promote-stage-fixture.mjs
lab/frida/agent/: export-oracle.js  stage-oracle.js
lab/frida/agent/stage/: cli-managed.js  reader-window.js
lab/frida/schemas/: export-capture.schema.json  run.schema.json
src/: bitstream.rs  bsdiff.rs  dcm.rs  huffman.rs  lib.rs  lzms.rs  main.rs  pa30.rs  winsxs.rs  xpress.rs
src/bitstream/: mod.rs
src/bsdiff/: mod.rs
src/lzms/: adaptive.rs  mod.rs  range_coder.rs  tables.rs  x86_filter.rs
src/lzx/: decode.rs  encode.rs  format.rs  mod.rs  ops.rs  rift.rs
src/pa19/: header.rs  lzx.rs  mod.rs
src/pa30/: encode.rs  header.rs  mod.rs  preprocess.rs  reverse.rs  signature.rs
src/pe/: addr.rs  atom.rs  cli_map.rs  cli_metadata.rs  cli_schema.rs  mod.rs  parse.rs  rift_gen.rs  structs.rs  transform.rs  x64.rs
src/pe/cli/: blob.rs  context.rs  create_map.rs  disasm.rs  map.rs  metadata.rs  metadata_transform.rs  method.rs  mod.rs  rift.rs  schema.rs  signature.rs  tokens.rs
src/snapshots/: msdelta__pa30__tests__BOOTSTRAP_smallest_manifest.snap
tests/: cli.rs  feature_atoms_registry.rs  frida_export_fixture.rs  frida_lab_contract.rs  frida_stage_fixture.rs  managed_native_corpus.rs  pa31_lcu_gaps.rs  pe_decode.rs  reverse_corpus.rs
tests/fixtures/: README.md  amd64_microsoft-windows-s..riencehost.appxmain_31bf3856ad364e35_10.0.26100.7309_none_9707d6de62619e8c.manifest  fuzz_crash_1.pa30  fuzz_crash_10.pa30  fuzz_crash_2.pa30  fuzz_crash_3.pa30  fuzz_crash_4.pa30  fuzz_crash_5.pa30  fuzz_crash_6.pa30  fuzz_crash_7.pa30  fuzz_crash_8.pa30  wow64_golden.xml  wow64_microsoft-windows-o..euapcommonproxystub_31bf3856ad364e35_10.0.26100.7309_none_38de5e2364a9fd20.manifest
tests/fixtures/atoms/FridaExportOracle/raw-apply-delta-b/: case.toml
tests/fixtures/atoms/FridaStageCapture/cli-blob-compressed-integer-win26100/: capture.json  case.toml
tests/fixtures/atoms/FridaStageCapture/cli-coded-token-map-win26100/: capture.json  case.toml
tests/fixtures/atoms/FridaStageCapture/cli-compression-rift-win26100/: capture.json  case.toml
tests/fixtures/atoms/FridaStageCapture/cli-map-win26100/: capture.json  case.toml
tests/fixtures/atoms/FridaStageCapture/cli-metadata-win26100/: capture.json  case.toml
tests/fixtures/atoms/ManagedNativeCorpus/cli-add-method/: case.toml  delta.pa30  source.cs  target.cs
tests/fixtures/atoms/ManagedNativeCorpus/cli-const-string/: case.toml  delta.pa30  source.cs  target.cs
tests/fixtures/atoms/ManagedNativeCorpus/cli-constructor-token-boundary/: case.toml  delta.pa30  source.cs  target.cs
tests/fixtures/atoms/ManagedNativeCorpus/cli-constructor-user-string-boundary/: case.toml  delta.pa30  source.cs  target.cs
tests/fixtures/deltas/: README.md  advapi32_pe.pa30  advapi32_raw.pa30  cmd__to__cmd_patched__pe_amd64.pa30  cmd__to__notepad__raw.pa30  cmd__to__notepad__raw_bsdiff_flag0x100.pa30  cmd__to__notepad__raw_flag0x20000.pa30  cmd__to__where__raw.pa30
tests/fixtures/deltas/genuine/: advapi32_pe_genuine.pa30  cmd_pe_genuine.pa30
tests/fixtures/lzms/: english.raw  pattern.raw  random.lzms  sequential.lzms  small.lzms  small.raw  zeros.lzms
tests/fixtures/pe-decode/: README.md
tests/fixtures/pe-decode/amd64_kbdwol/: delta.pa30
tests/fixtures/pe-decode/amd64_provdiagnostics/: delta.pa30
tests/fixtures/pe-decode/wow64_kbdmaori/: delta.pa30
tests/fixtures/pe-decode/x86_mscordbi/: delta.pa30
tests/windows/: README.md  apply_harness.ps1  create_probe.ps1  gen_golden.ps1
(+149 files in other folders)
