[workspace]
members = ["crates/lzms", "crates/oracle"]
resolver = "2"

[package]
name = "msdelta"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlevere/msdelta"
description = "Pure-Rust encoder and decoder for Microsoft's MSDelta (PA30/PA31/PA19) binary patch format."
categories = ["compression", "parser-implementations", "os::windows-apis"]
keywords = ["windows", "delta", "patch", "manifest", "winsxs"]
# Keep the published tarball lean: real WinSxS manifest fixtures and the fuzz
# corpus are needed for development from a git checkout, not by consumers.
exclude = ["tests/fixtures", "fuzz"]

[features]
default = ["cli"]
# The `msdelta` binary. Kept in `default` so `cargo build`/`run`/`install`
# work out of the box; library consumers that want a lean tree can build with
# `--no-default-features`.
cli = ["winsxs", "dep:clap", "dep:clap_complete", "dep:anyhow", "dep:dirs"]
# WinSxS base-manifest extraction from a `wcp.dll` (pure byte-parsing, no
# Windows APIs). Pulls in `memchr` for the multi-MB DLL scans; otherwise just
# the always-present `goblin` PE parser. Off for the leanest library builds.
winsxs = ["dep:memchr"]
# Exposes internal decoders for the fuzz harnesses (see src/lib.rs::fuzzing).
fuzzing = []

[dependencies]
thiserror = "2"
lzms = { version = "0.1", path = "crates/lzms" }
goblin = { version = "0.10", default-features = false, features = ["pe64", "pe32"] }
lzxd = "0.2"
md-5 = "0.11"
sha2 = "0.11"
digest = "0.11"
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
anyhow = { version = "1", optional = true }
dirs = { version = "6", optional = true }
memchr = { version = "2", optional = true }
sha1 = "0.11"

[[bin]]
name = "msdelta"
required-features = ["cli"]

[dev-dependencies]
anyhow = "1"
insta = "1"

[profile.release]
lto = "thin"
codegen-units = 1
