[package]
name = "msdelta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Stand alone as its own workspace: this crate lives inside the msdelta repo but
# is not a member, and depending on the `lzms` workspace member by path would
# otherwise pull it into the parent workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.msdelta]
path = ".."
default-features = false

[dependencies.lzms]
path = "../crates/lzms"

[[bin]]
name = "fuzz_apply"
path = "fuzz_targets/fuzz_apply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip_lzx"
path = "fuzz_targets/fuzz_roundtrip_lzx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_roundtrip_bsdiff"
path = "fuzz_targets/fuzz_roundtrip_bsdiff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms"
path = "fuzz_targets/fuzz_lzms.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rift_roundtrip"
path = "fuzz_targets/fuzz_rift_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_decompress"
path = "fuzz_targets/fuzz_lzms_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_container"
path = "fuzz_targets/fuzz_lzms_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_roundtrip"
path = "fuzz_targets/fuzz_lzms_roundtrip.rs"
test = false
doc = false
bench = false
