[package]
name = "msdelta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Stand alone as its own workspace: this crate lives inside the msdelta repo but
# is not a member, and depending on the `lzms` workspace member by path would
# otherwise pull it into the parent workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.msdelta]
path = ".."
default-features = false

[dependencies.lzms]
path = "../crates/lzms"

# Structure-aware inputs shared by the round-trip targets.
[lib]
name = "msdelta_fuzz"
path = "src/lib.rs"

[[bin]]
name = "fuzz_apply"
path = "fuzz_targets/fuzz_apply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pa30_header"
path = "fuzz_targets/fuzz_pa30_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pa30_roundtrip"
path = "fuzz_targets/fuzz_pa30_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_decompress"
path = "fuzz_targets/fuzz_lzms_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_container"
path = "fuzz_targets/fuzz_lzms_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_roundtrip"
path = "fuzz_targets/fuzz_lzms_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_wim"
path = "fuzz_targets/fuzz_lzms_wim.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_wim_roundtrip"
path = "fuzz_targets/fuzz_lzms_wim_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lzms_mutate"
path = "fuzz_targets/fuzz_lzms_mutate.rs"
test = false
doc = false
bench = false
