[package]
name = "msdelta-lzms"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "LZMS (Lempel-Ziv-Markov-Shannon) compression codec for MSDelta."

[dependencies]
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Storage_Compression"] }
