[package]
name = "msdelta-wintest"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Integration tests that validate msdelta against the real Windows msdelta.dll."

[dependencies]
msdelta = { path = "../msdelta" }
msdelta-lzms = { path = "../msdelta-lzms" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
] }
