[package]
name = "msdelta"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Pure-Rust encoder and decoder for Microsoft's MSDelta (PA30) binary patch format."
categories = ["compression", "parser-implementations", "os::windows-apis"]
keywords = ["windows", "delta", "patch", "manifest", "winsxs"]

[dependencies]
msdelta-bitstream = { path = "../msdelta-bitstream" }
msdelta-lzx = { path = "../msdelta-lzx" }
msdelta-pa19 = { path = "../msdelta-pa19" }
thiserror = "2"
md-5 = "0.10"
sha2 = "0.10"
digest = "0.10"

[dev-dependencies]
anyhow = "1"
insta = "1"
md-5 = "0.10"
